# light_agent

./: .env-examples  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  verify_multi_model.py
.serena/: project.yml
data/approvals/responses/: a1e9ea62.json
docs/: 12factor_implementation.md  architecture.md  development_guide.md  features.md  getting-started.md  git_operations.md  librarian_tools.md  observations.md  providers.md  status.md  tools_mcp.md  workspace.md
light_agent/agent/: __init__.py  builder.py  context.py  hooks.py  loop.py  mcp_client.py  memory.py  observer.py  reducer.py  short_memory.py  skills.py  subagent.py  thread.py  thread_store.py
light_agent/agent/tools/: __init__.py  approval.py  filesystem.py  gh_api_tool.py  git_tool.py  github_check.py  github_public.py  github_workflow_tool.py  memory_tool.py  message.py  native.py  parallel_spawn.py  registry.py  shell.py  spawn.py  wait.py  web.py
light_agent/base/agents/: AGENTS.md  HEARTBEAT.md  LIBRARIAN.md
light_agent/base/memory/: memory.md
light_agent/cli/: __init__.py  application.py  commands.py
light_agent/config/: settings.py
light_agent/core/: __init__.py  console_subscriber.py  events.py
light_agent/providers/: base.py  litellm_provider.py
light_agent/session/: manager.py
light_agent/utils/: helpers.py  output.py
lightagent/agent/: __init__.py  builder.py  context.py  loop.py  mcp_client.py  memory.py  observer.py  skills.py  subagent.py
lightagent/agent/compaction/: __init__.py  config.py  (+2 more)
lightagent/cli/: __init__.py  application.py
lightagent/config/: settings.py
lightagent/core/: __init__.py  console_subscriber.py
lightagent/providers/: base.py  litellm_provider.py
lightagent/session/: manager.py
lightagent/utils/: helpers.py
tests/: __init__.py  conftest.py
tests/agents/: test_agent_builder.py  test_agent_loop.py  test_compaction.py  test_sandbox.py  test_subagent.py  test_thinking.py  test_tool.py  test_tool_registry.py  test_vector.py
tests/observations/: test_categorizer.py  test_consolidation.py  test_context.py  test_deduplication.py  test_scorer.py  test_summarizer.py
tests/providers/: test_litellm_provider.py
tests/skills/: __init__.py  test_skills_loader.py
workspace/: memory_migrate.old  servers_config.json  servers_config.json-example
workspace/agents/: heartbeat.md  technician.md
workspace/memory/: 2026-02-06.json
(+51 files in other folders)
