[project]
name = "lightagent"
version = "0.1.0"
description = "Lightweight SRE AI Agent"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "litellm>=1.81.8",
    "loguru>=0.7.3",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "readability-lxml>=0.8.4.1",
    "rich>=14.3.2",
    "typer>=0.21.1",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lightagent = "lightagent.cli.application:app"

[tool.hatch.build.targets.wheel]
packages = ["lightagent"]

[tool.hatch.build]
include = [
    "lightagent/**/*.py",
    "workspace/skills/**/*.md",
    "workspace/skills/**/*.sh",
]

[tool.hatch.build.targets.wheel.sources]
"lightagent" = "lightagent"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
